--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h2 {
 }
 
 #projects {
-    padding: 20px;
+    padding:10px;
 }
 
 .project {
@@ -44,6 +44,7 @@ h2 {
     opacity: 0; /* Inicialmente oculto */
     transform: translateY(50px); /* Movido hacia abajo */
     transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    cursor: pointer; /* Cambia el cursor al pasar sobre el proyecto */
 }
 
 .project.visible {
@@ -58,6 +59,25 @@ h2 {
     margin-bottom: 15px;
 }
 
+.additional-images {
+    display: none; /* Oculto inicialmente */
+    margin-top: 15px;
+    opacity: 0;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.additional-images.visible {
+    display: block; /* Mostrar cuando esté activo */
+    opacity: 1;
+}
+
+.additional-images img {
+    width: 100%;
+    max-width: 600px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+}
+
 .project h3 {
     color: #0078D4;
     font-size: 1.5em;
@@ -67,6 +87,11 @@ h2 {
 .project p {
     font-size: 1em;
     color: #555;
+}
+
+.project:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 footer {
