--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header p {
 h2 {
   color: #005a9e;
   font-size: 2em;
-  margin-top: 40px;
+  margin-top:10px;
 }
 
 #projects {
@@ -74,7 +74,7 @@ h2 {
 }
 
 .additional-images img {
-  width: 150%;
+  width: 300px;
   height: auto;
   border-radius: 8px;
   margin-right: 10px;
